[gd_scene load_steps=10 format=3 uid="uid://c1q5khwepbabi"]

[ext_resource type="Script" path="res://demo/subscenes/demo_selector.gd" id="1_87q0h"]
[ext_resource type="PackedScene" uid="uid://ccy07coqyd1kq" path="res://DROW.tscn" id="2_mlbrg"]
[ext_resource type="Script" path="res://wheel-components/wheel_segment_data.gd" id="4_q7yu1"]

[sub_resource type="Resource" id="Resource_ybvug"]
script = ExtResource("4_q7yu1")
color = Color(1, 1, 1, 1)
value = 0
selectable = true

[sub_resource type="Resource" id="Resource_mbnxc"]
script = ExtResource("4_q7yu1")
color = Color(1, 1, 1, 1)
value = 0
selectable = true

[sub_resource type="Resource" id="Resource_rrh1p"]
script = ExtResource("4_q7yu1")
color = Color(1, 1, 1, 1)
value = 0
selectable = true

[sub_resource type="Resource" id="Resource_qrtvl"]
script = ExtResource("4_q7yu1")
color = Color(1, 1, 1, 1)
value = 0
selectable = true

[sub_resource type="Resource" id="Resource_8ffis"]
script = ExtResource("4_q7yu1")
color = Color(1, 1, 1, 1)
value = 0
selectable = true

[sub_resource type="LabelSettings" id="LabelSettings_e3vx1"]
font_size = 56
shadow_size = 5
shadow_color = Color(0.374139, 0.374139, 0.374139, 1)
shadow_offset = Vector2(3, 3)

[node name="DemoSelector" type="CenterContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_87q0h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="DROW" parent="VBoxContainer" instance=ExtResource("2_mlbrg")]
unique_name_in_owner = true
layout_mode = 2
selector_active = false
rotate_on_selection = false
overlay_color = Color(0.223103, 0.223103, 0.223103, 1)
segment_limit = 5
max_multiplier_value = 100
value_segment_data = Array[ExtResource("4_q7yu1")]([SubResource("Resource_ybvug"), SubResource("Resource_mbnxc"), SubResource("Resource_rrh1p"), SubResource("Resource_qrtvl"), SubResource("Resource_8ffis")])

[node name="DemoName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_e3vx1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="new_segment_chosen" from="VBoxContainer/DROW" to="." method="_go_to_selected_demo"]
[connection signal="new_segment_selected" from="VBoxContainer/DROW" to="." method="_update_displayed_demo"]
